--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,15 @@ services:
       - mongodb
     networks:
       - COMP3123-Assignment
+    develop:
+      watch:
+        - action: sync
+          path: .
+          target: /app
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: package.json
 
 volumes:
   mongodb_data:
